--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ subprojects {
     apply from: "$rootProject.projectDir/gradle/upload.gradle"
     
     group = "com.bt"
-    version = '1.0.0-SNAPSHOT'
+    version = '1.0.0'
     
     sourceCompatibility = "11"
     targetCompatibility = "11"
