--- a/gradle/upload.gradle
+++ b/gradle/upload.gradle
@@ -10,6 +10,9 @@ publishing {
         library(MavenPublication) {
             from components.java
         }
+//        mavenJava(MavenPublication) {
+//            groupId = 'com.bt'
+//        }
     }
 
     repositories{
