--- a/quarkus-mybatis/build.gradle
+++ b/quarkus-mybatis/build.gradle
@@ -12,7 +12,8 @@ dependencies {
 
     api "io.quarkus:quarkus-arc"
     api "io.quarkus:quarkus-agroal"
-    api 'org.mybatis:mybatis:3.5.7'
+    api project(':bt-mybatis')
+
     implementation 'org.graalvm.nativeimage:svm'
     annotationProcessor("io.quarkus:quarkus-extension-processor:${quarkusPlatformVersion}")
 }
