--- a/settings.gradle
+++ b/settings.gradle
@@ -19,4 +19,4 @@ pluginManagement {
 }
 
 
-include 'quarkus-mybatis','quarkus-mybatis-deployment'
+include 'bt-mybatis','quarkus-mybatis','quarkus-mybatis-deployment'
