--- a/quarkus-mybatis/build.gradle
+++ b/quarkus-mybatis/build.gradle
@@ -14,6 +14,6 @@ dependencies {
     api "io.quarkus:quarkus-agroal"
     api project(':bt-mybatis')
 
-    implementation 'org.graalvm.nativeimage:svm'
+//    implementation 'org.graalvm.nativeimage:svm'
     annotationProcessor("io.quarkus:quarkus-extension-processor:${quarkusPlatformVersion}")
 }
