--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 
 plugins {
     id 'java-library'
-    id 'io.quarkus'  version "$quarkusPluginVersion" apply false
+//    id 'io.quarkus'  version "$quarkusPluginVersion" apply false
     id "io.quarkus.extension"  version "$quarkusPluginVersion"// apply false
 //    id 'maven-publish' //apply false
 }
@@ -35,12 +35,11 @@ subprojects {
     apply from: "$rootProject.projectDir/gradle/upload.gradle"
     
     group = "com.bt"
-    version = '1.0.0'
-    
+    version = '1.0.1'
+
+
     sourceCompatibility = "11"
     targetCompatibility = "11"
-
-
+//    sourceCompatibility = JavaVersion.VERSION_1_8
+//    targetCompatibility = JavaVersion.VERSION_1_8
 }
-//sourceCompatibility = JavaVersion.VERSION_17
-//targetCompatibility = JavaVersion.VERSION_17
