--- a/mybatis/build.gradle
+++ b/mybatis/build.gradle
@@ -1,5 +1,6 @@
+group = "com.bt.common"
 version = '1.0.0'
 dependencies {
     api 'org.mybatis:mybatis:3.5.7'
-    api project(':common-model')
+    api project(':model')
 }
