--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,5 +1,5 @@
 group = "com.bt.common"
 version = '1.0.0'
 dependencies {
-    implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
+    api 'jakarta.validation:jakarta.validation-api:2.0.2'
 }
