--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,11 @@ subprojects {
 
     sourceCompatibility = "11"
     targetCompatibility = "11"
+
+    // enable  gradle junit support for cli / gradle test
+    test {
+        useJUnitPlatform()
+    }
 //    sourceCompatibility = JavaVersion.VERSION_1_8
 //    targetCompatibility = JavaVersion.VERSION_1_8
 }
