--- a/mybatis/build.gradle
+++ b/mybatis/build.gradle
@@ -1,8 +1,16 @@
 group = "com.bt.common"
 version = '1.0.0'
 dependencies {
-    api 'org.mybatis:mybatis:3.5.7'
+    api 'org.mybatis:mybatis:3.5.10'
 
     implementation "com.bt.rpc:rpc-common:1.0.0"
     api project(':model')
+
+
+    // or one line testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+
+    testImplementation 'mysql:mysql-connector-java:8.0.30'
+    testImplementation 'org.slf4j:slf4j-simple:1.7.36'
 }
