--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,7 @@
 
 plugins {
     id 'java-library'
-//    id 'io.quarkus'  version "$quarkusPluginVersion" apply false
-    id "io.quarkus.extension"  version "$quarkusPluginVersion"// apply false
-//    id 'maven-publish' //apply false
+    id "io.quarkus.extension"  version "$quarkusMiniSupport"// apply false
 }
 
 
