--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,9 @@ org.gradle.logging.level=INFO
 #MAVEN_REPO = https://jfrog.botaoyx.com/artifactory/public/
 MAVEN_REPO = https://jcr.botaoyx.com/artifactory/maven/
 
-quarkusPluginVersion=2.4.2.Final
-quarkusPlatformVersion=2.4.2.Final
+# same with bt-grpc
+quarkusMiniSupport=2.10.4.Final
+
 # user libs
 #grpcVersion = 1.40.1
 #lombokVersion = 1.18.22
