--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,12 @@ org.gradle.logging.level=INFO
 #MAVEN_REPO = https://jfrog.botaoyx.com/artifactory/public/
 MAVEN_REPO = https://jcr.botaoyx.com/artifactory/maven/
 
-# same with bt-grpc
-quarkusMiniSupport=2.10.4.Final
+group = com.bt.ext
+# same with the rpc
+version = 1.1.0
+rpcVersion = 1.1.0
 
-# user libs
-#grpcVersion = 1.40.1
-#lombokVersion = 1.18.22
-#slf4jVersion = 1.7.32
-#jacksonVersion=2.12.5
+# same with bt-grpc
+quarkusMiniSupport=3.0.2.Final
+# keep with the graal-sdk
+graalSdkVersion=22.3.0
