--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,9 +1,5 @@
 group = "com.bt.common"
-version = '1.0.0'
+//version = '1.0.0'
 dependencies {
-    api 'jakarta.validation:jakarta.validation-api:2.0.2'
-
-//    implementation project(':mybatis')
-//    annotationProcessor project(':mybatis')
-
+    api 'jakarta.validation:jakarta.validation-api:3.0.2'
 }
