--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,12 @@
 org.gradle.logging.level=INFO
 
 # user settings
-#MAVEN_REPO = https://jfrog.botaoyx.com/artifactory/public/
-MAVEN_REPO = https://jcr.botaoyx.com/artifactory/maven/
+MAVEN_REPO = https://jcr.zhulinkeji.com/artifactory/maven/
 
 group = com.bt.ext
 # same with the rpc
-version = 1.1.0
-rpcVersion = 1.1.0
+version = 1.0.0
+rpcVersion = 1.0.0
 
 # same with bt-grpc
 quarkusMiniSupport=3.0.2.Final
